re added nuclear furnace recipes fixed items not being registered